refactor(接口测试): 优化超时处理逻辑
https://github.com/metersphere/metersphere/issues/32037
Signed-off-by: fit2-zhao <yong.zhao@fit2cloud.com>